--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,19 +6,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/background_light"
-    tools:context="com.example.anchalgarg.somegame.MainActivity">
+    tools:context="com.ex.anchalgarg.somegame.MainActivity">
 
     <GridView
         android:id="@+id/gridView"
         android:layout_width="match_parent"
-        android:layout_height="350sp"
+        android:layout_height="350dp"
         android:layout_alignEnd="@+id/movesLabel"
         android:layout_alignLeft="@+id/button"
         android:layout_alignRight="@+id/movesLabel"
         android:layout_alignStart="@+id/button"
         android:layout_below="@+id/textView"
         android:background="@android:color/background_dark"
-        android:numColumns="5" />
+        android:numColumns="5" >
+
+
+
+    </GridView>
 
     <TextView
         android:id="@+id/textView"
@@ -59,72 +63,76 @@
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="change level"
         android:layout_alignParentBottom="true"
-        android:layout_toLeftOf="@+id/movesLabel"
-        android:layout_toStartOf="@+id/movesLabel"
-        android:text="change level" />
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:id="@+id/Exit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Exit"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/imageView12"
+        android:layout_alignEnd="@+id/imageView12" />
 
     <ImageButton
         android:id="@+id/imageView6"
-        android:layout_width="70dp"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/button"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/gridView"
-        android:adjustViewBounds="true"
+        android:layout_width="60dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="400dp"
         android:background="@android:color/transparent"
-        android:padding="10dp"
-        android:scaleType="centerCrop"
         app:srcCompat="@drawable/blue_a" />
 
     <ImageButton
         android:id="@+id/imageView8"
-        android:layout_width="65dp"
-        android:layout_height="65dp"
-        android:layout_above="@+id/button"
-        android:layout_below="@+id/gridView"
-        android:layout_toEndOf="@+id/imageView6"
-        android:layout_toRightOf="@+id/imageView6"
+        android:layout_width="60dp"
+        android:layout_height="50dp"
+
         android:background="@android:color/transparent"
-        android:padding="10dp"
-        android:scaleType="centerCrop"
-        app:srcCompat="@drawable/pinkish" />
+        app:srcCompat="@drawable/oinkcircle"
+        android:layout_marginLeft="80dp"
+        android:layout_marginTop="400dp" />
 
     <ImageButton
         android:id="@+id/imageView9"
-        android:layout_width="70dp"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/button2"
-        android:layout_below="@+id/gridView"
-        android:layout_toRightOf="@+id/imageView8"
+        android:layout_width="60dp"
+        android:layout_height="50dp"
+
         android:background="@android:color/transparent"
-        android:padding="10dp"
-        android:scaleType="centerCrop"
-        app:srcCompat="@drawable/greencircle" />
+        app:srcCompat="@drawable/greencircle"
+        android:layout_marginLeft="150dp"
+        android:layout_marginTop="400dp"/>
 
     <ImageButton
         android:id="@+id/imageView10"
-        android:layout_width="80dp"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/button2"
-        android:layout_below="@+id/gridView"
-        android:layout_toRightOf="@+id/imageView9"
+        android:layout_width="60dp"
+        android:layout_height="50dp"
         android:background="@android:color/transparent"
-        android:padding="10dp"
-        android:scaleType="centerCrop"
-        app:srcCompat="@drawable/yellowcicle" />
+        app:srcCompat="@drawable/yellowcicle"
+        android:layout_marginLeft="220dp"
+        android:layout_marginTop="400dp" />
 
     <ImageButton
         android:id="@+id/imageView12"
-        android:layout_width="85dp"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/button2"
-        android:layout_below="@+id/gridView"
-        android:layout_toRightOf="@+id/imageView10"
+        android:layout_width="60dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="290dp"
+        android:layout_marginTop="400dp"
         android:background="@android:color/transparent"
-        android:padding="10dp"
-        android:scaleType="centerCrop"
         app:srcCompat="@drawable/red_circle" />
+
+
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true">
+
+    </FrameLayout>
+
 
 </RelativeLayout>
